Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -34,9 +34,11 @@
         <p><em>Drombler Commons</em> is a collection of reusable libraries and frameworks. They ship with OSGi meta data but don't require an OSGi environment.</p>
 
 <h3>
-<a id="documentation" class="anchor" href="#documentation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Documentation</h3>
+<a id="documentation" class="anchor" href="#documentation" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Documentation</h3>
 
 <ul>
+<li><a href="0.9-SNAPSHOT">v0.9-SNAPSHOT</a></li>
+<li><a href="0.8">v0.8</a></li>
 <li><a href="0.7">v0.7</a></li>
 <li><a href="0.6">v0.6</a></li>
 <li><a href="0.5">v0.5</a></li>
@@ -45,14 +47,14 @@
 </ul>
 
 <h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
 <ul>
 <li>Florian Brunner (<a href="https://github.com/puce77" class="user-mention">@puce77</a>)</li>
 </ul>
 
 <h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
 
 <p>Check out the documentation at <a href="https://www.drombler.org/drombler-commons/current/docs">https://www.drombler.org/drombler-commons/current/docs</a> or contact <a href="https://github.com/puce77" class="user-mention">@puce77</a> directly.</p>
       </section>
