--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
 
-<p>Check out the documentation at <a href="https://www.drombler.org/drombler-commons/current/docs">https://www.drombler.org/drombler-commons/current/docs</a> or contact <a href="https://github.com/puce77" class="user-mention">@puce77</a> directly.</p>
+<p>Check out the documentation at <a href="http://www.drombler.org/drombler-commons/current/docs">https://www.drombler.org/drombler-commons/current/docs</a> or contact <a href="https://github.com/puce77" class="user-mention">@puce77</a> directly.</p>
       </section>
     </div>
 
